--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -4,6 +4,8 @@
   color: '1cc998'
 - name: 'bug'
   color: 'd62437'
+- name: 'cache'
+  color: 'bcace8'
 - name: 'chore'
   color: 'e6e6e6'
 - name: 'dependencies'
@@ -14,6 +16,8 @@
   color: 'd4bcbf'
 - name: 'enhancement'
   color: '25c4db'
+- name: 'gateway'
+  color: 'bcace8'
 - name: 'has PR'
   color: '8627c4'
 - name: 'help wanted'
@@ -26,6 +30,8 @@
   color: 'ff2432'
 - name: 'refactor'
   color: 'f0b40e'
+- name: 'rest'
+  color: 'bcace8'
 - name: 'semver: major'
   color: 'ff7236'
 - name: 'semver: minor'
