--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@distype/lavalink",
   "version": "1.0.0",
-  "description": "A lavalink wrapper with native bindings to Distype, as well as other JavaScript and TypeScript Discord libraries.",
+  "description": "A lavalink wrapper with native bindings to Distype.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -11,20 +11,24 @@
     "docs:install": "npm i --also=dev && npm run docs",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
+    "lint:install": "npm i --also=dev && npm run lint",
     "prepublishOnly": "npm run build:install",
-    "test:build": "npm run build",
-    "test:docs": "npm run docs",
-    "test:lint": "npm run lint"
+    "test:build": "npm run build:install",
+    "test:docs": "npm run docs:install",
+    "test:lint": "npm run lint:install"
   },
   "keywords": [
+    "api",
     "bot",
+    "client",
     "discord",
+    "discord-api",
     "discord-bot",
     "discordapp",
     "distype",
     "lavalink"
   ],
-  "homepage": "https://distype.br88c.dev",
+  "homepage": "https://distypelavalink.br88c.dev",
   "bugs": {
     "url": "https://github.com/distype/lavalink/issues"
   },
@@ -35,18 +39,19 @@
     "url": "git+https://github.com/distype/lavalink.git"
   },
   "dependencies": {
-    "@discordjs/collection": "^0.4.0",
-    "discord-api-types": "^0.26.1",
-    "undici": "^4.12.1",
-    "ws": "^8.4.0"
+    "@br88c/node-utils": "^1.1.3",
+    "@types/ws": "^8.5.3",
+    "discord-api-types": "^0.31.2",
+    "distype": "^0.10.1",
+    "undici": "^5.0.0",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
-    "@br88c/eslint-config": "^1.3.0",
-    "@types/node": "^16.11.19",
-    "@types/ws": "^8.2.2",
-    "eslint": "^8.6.0",
-    "typedoc": "^0.22.10",
-    "typescript": "^4.5.4"
+    "@br88c/eslint-config": "^1.4.0",
+    "@types/node": "^16.11.27",
+    "eslint": "^8.13.0",
+    "typedoc": "^0.22.15",
+    "typescript": "^4.6.3"
   },
   "engines": {
     "node": ">=16.13.0",
