--- a/package.json
+++ b/package.json
@@ -6,16 +6,10 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rm -rf ./dist && tsc",
-    "build:install": "npm i --also=dev && npm run build",
     "docs": "rm -rf ./docs && typedoc",
-    "docs:install": "npm i --also=dev && npm run docs",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "lint:install": "npm i --also=dev && npm run lint",
-    "prepublishOnly": "npm run build:install",
-    "test:build": "npm run build:install",
-    "test:docs": "npm run docs:install",
-    "test:lint": "npm run lint:install"
+    "prepublishOnly": "npm run build:install"
   },
   "keywords": [
     "api",
@@ -39,17 +33,17 @@
     "url": "git+https://github.com/distype/lavalink.git"
   },
   "dependencies": {
-    "@br88c/node-utils": "^1.2.1",
+    "@br88c/node-utils": "^1.3.0",
     "@types/ws": "^8.5.3",
-    "discord-api-types": "^0.32.1",
-    "distype": "^0.13.1",
-    "undici": "^5.2.0",
-    "ws": "^8.6.0"
+    "discord-api-types": "^0.33.1",
+    "distype": "^0.14.0",
+    "undici": "^5.3.0",
+    "ws": "^8.7.0"
   },
   "devDependencies": {
-    "@br88c/eslint-config": "^1.4.0",
-    "@types/node": "^16.11.34",
-    "eslint": "^8.15.0",
+    "@br88c/eslint-config": "^1.5.0",
+    "@types/node": "^16.11.36",
+    "eslint": "^8.16.0",
     "typedoc": "^0.22.15",
     "typescript": "^4.6.4"
   },
