--- a/package.json
+++ b/package.json
@@ -33,19 +33,19 @@
     "url": "git+https://github.com/distype/lavalink.git"
   },
   "dependencies": {
-    "@br88c/node-utils": "^1.3.0",
+    "@br88c/node-utils": "^1.3.1",
     "@types/ws": "^8.5.3",
-    "discord-api-types": "^0.33.1",
-    "distype": "^0.14.0",
-    "undici": "^5.3.0",
-    "ws": "^8.7.0"
+    "discord-api-types": "^0.35.0",
+    "distype": "^0.15.0",
+    "undici": "^5.5.1",
+    "ws": "^8.8.0"
   },
   "devDependencies": {
     "@br88c/eslint-config": "^1.5.0",
-    "@types/node": "^16.11.36",
-    "eslint": "^8.16.0",
-    "typedoc": "^0.22.15",
-    "typescript": "^4.6.4"
+    "@types/node": "^16.11.41",
+    "eslint": "^8.18.0",
+    "typedoc": "0.23.0-beta.7",
+    "typescript": "^4.7.4"
   },
   "engines": {
     "node": ">=16.13.0",
