--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@distype/lavalink",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "A Lavalink wrapper with native bindings to Distype.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -35,16 +35,16 @@
   "dependencies": {
     "@br88c/node-utils": "^1.3.1",
     "@types/ws": "^8.5.3",
-    "discord-api-types": "^0.35.0",
-    "distype": "^0.15.0",
-    "undici": "^5.5.1",
+    "discord-api-types": "^0.36.1",
+    "distype": "^0.16.0",
+    "undici": "^5.6.0",
     "ws": "^8.8.0"
   },
   "devDependencies": {
     "@br88c/eslint-config": "^1.5.0",
-    "@types/node": "^16.11.41",
-    "eslint": "^8.18.0",
-    "typedoc": "0.23.0-beta.7",
+    "@types/node": "^16.11.43",
+    "eslint": "^8.19.0",
+    "typedoc": "^0.23.5",
     "typescript": "^4.7.4"
   },
   "engines": {
