--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf ./dist && tsc",
-    "docs": "rm -rf ./docs && typedoc",
+    "build": "rimraf ./dist && tsc",
+    "docs": "rimraf ./docs && typedoc",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "prepublishOnly": "npm i --also=dev && npm run build"
@@ -44,6 +44,7 @@
     "@br88c/eslint-config": "^1.5.1",
     "@types/node": "^16.11.45",
     "eslint": "^8.20.0",
+    "rimraf": "^3.0.2",
     "typedoc": "^0.23.7",
     "typescript": "^4.7.4"
   },
